[css-grid] Too many gaps with trailing collapsing tracks

The total size of gaps were incorrectly computed whenever there were
trailing collapsed tracks (with collapsed gaps). The problem was that we
were trying to optimize too much the amount of hash table queries required
to know the gaps between two lines. We were considering that a gap always
exist between 2 consecutive tracks if the first one is not empty. That's
generally true (for both NOTEMPTY - NOTEMPTY and NOTEMPTY - EMPTY+
- NOTEMPTY sequences) but not for all the cases (NOTEMPTY - EMPTY+).

BUG=645746

Review-Url: https://codereview.chromium.org/2336663002
Cr-Commit-Position: refs/heads/master@{#418209}

Former-commit-id: 011d6fa1bdaa3f942a389ae3b55d20f681c63bbf